# urqmd-afterburner

./: CMakeLists.txt  LICENSE  README.md  afterburner  urqmd-afterburner
osc2u/: CMakeLists.txt  blockres.f  comres.f  dectim.f  genranf.f  gnuranf.f  osc2u.f  pdg2ityp.f  ucoms.f  vni_procev.f
urqmd/: 1fluid.f  CMakeLists.txt  anndec.f  blockres.f  colltab.f  coload.f  coms.f  cornelius.f90  dwidth.f  getmass.f  init.f  input.f  iso.f  ityp2pdg.f  make22.f  options.f  output.f  scatter.f  string.f  uhmerge.f  urqmd.f
